# wkb

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  PLAN.md  README.md  bench.sh  build.rs
.cargo/: config.toml
.github/workflows/: benchmark.yml  tests.yml
.opencode/command/: safe-rust-here.md
.opencode/skills/safe-rust-refactor/: SKILL.md
benches/: bench_compose.rs  bench_key.rs  bench_setup.rs  bench_speed.rs  common.rs
examples/: bench_memory.rs  bench_size_wkb.rs  bench_size_xkbcommon.rs  bench_size_xkbcommon_compat.rs  bench_size_xkbcommon_dl.rs  check_ron.rs  find_invariant_keys.rs  generate_ron.rs  profile_setup.rs
repeat-gen/: Cargo.toml  build.rs
repeat-gen/src/: main.rs
scripts/: analyze_cat_a.js  fix_batch1_imports.js  fix_cat_b_imports.js  fix_cat_b_nested.js  fix_orphans.js  flatten_batch4.js  flatten_singletons.js  generate_benchmark_table.js  remove_ast_h.js  remove_batch1.js  remove_batch2.js  remove_batch3.js  remove_batch_simple.js  remove_cat_a.js  remove_cat_b.js  remove_include_h.js  remove_keymap_h.js  remove_messages_codes_h.js  remove_module.js  remove_scanner_utils_h.js  remove_utils_h.js  remove_utils_numbers_h.js  remove_xkbcomp_priv_h.js  replace_darray.js
src/: bitset.rs  composer.rs  default_keymap.rs  evdev_xkb.rs  flat_keymap.rs  keysyms.rs  lib.rs  main.rs  modifiers.rs  named_keys.rs  repeat.rs  repeat_default.rs  ron_format.rs  testing.rs  xkb.rs  xkb_utf8.rs
src/xkb/: atom.rs  buffercomp.rs  check_messages.rs  common.rs  compile_compose.rs  compile_keymap.rs  compose.rs  compose_iter.rs  compose_parse.rs  compose_traversal.rs  context.rs  context_priv.rs  custom_parsers.rs  default_keymap.rs  extensions_directories.rs  features.rs  filecomp.rs  introspection.rs  key_proc.rs  keymap.rs  keymap_compare.rs  keymap_formats.rs  keymap_priv.rs  keyseq.rs  keysym.rs  keysym_case_mappings.rs  keysym_table_data.rs  keysym_unicode.rs  keysym_utf.rs  lenient_mode.rs  log.rs  messages.rs  mod.rs  modifiers.rs  registry.rs  registry_list.rs  repeat.rs  rmlvo.rs  rules_file.rs  rules_file_includes.rs  (+18 more)
src/xkb/data/: compat.xkb  types.xkb
src/xkb/xkb_backend/: atom.rs  compose.rs  context.rs  keymap.rs  keysym.rs  keysym_utf.rs  lib.rs  messages.rs  mod.rs  registry.rs  rust_types.rs  scanner_utils.rs  serialize.rs  shared_ast_types.rs  shared_types.rs  state.rs  text.rs  utils.rs
src/xkb/xkb_backend/xkbcomp/: action.rs  ast_build.rs  compat.rs  expr.rs  include.rs  keycodes.rs  keymap.rs  keywords.rs  mod.rs  parser.rs  prelude.rs  rules.rs  scanner.rs  symbols.rs  types.rs  vmod.rs  (+1 more)
src/xkb/xkbcomp/: action.rs  ast_build.rs  compat.rs  expr.rs  include.rs  keycodes.rs  keymap.rs  keymap_file_iterator.rs  keywords.rs  mod.rs  parser.rs  prelude.rs  rules.rs  scanner.rs  symbols.rs  types.rs  vmod.rs  xkbcomp.rs
test_files/compile-include/rules/: evdev-modern  special_indexes  x
test_files/compile-include/symbols/: merge_modes
test_files/compile-tests/: .gitignore
test_files/type-include/keycodes/: generated
tests/: caps_lock.rs  caps_num_lock.rs  common.rs  compile.rs  compose.rs  composing.rs  compositing.rs  ctrl_keys.rs  keymap.rs  keymap_export.rs  keymap_string.rs  keysym.rs  layouts.rs  led_lights.rs  level.rs  modifiers.rs  modifiers_state.rs  num_lock.rs  repeat.rs  state.rs  type.rs  unicode.rs  xkb_vs_wkb.rs
tests/common/: mod.rs
wkb/: Cargo.toml  README.md
wkb/src/: lib.rs  main.rs  repeat.rs
wkb/tests/: xkb_vs_wkb.rs
xkb-core/: Cargo.toml  LICENSE  README.md
xkb-core/src/: atom.rs  compose.rs  context.rs  features.rs  keymap.rs  keysym.rs  keysym_utf.rs  lib.rs  messages.rs  registry.rs  rust_types.rs  scanner_utils.rs  serialize.rs  shared_ast_types.rs  shared_types.rs  state.rs  text.rs  utf8_decoding.rs  utils.rs
xkb-core/src/xkbcomp/: action.rs  ast_build.rs  compat.rs  expr.rs  include.rs  keycodes.rs  keymap.rs  keywords.rs  parser.rs  prelude.rs  rules.rs  scanner.rs  symbols.rs  types.rs  vmod.rs  xkbcomp.rs
xkbcommon-compat/: Cargo.toml
xkbcommon-compat/src/: lib.rs
(+286 files in other folders)
