[workspace]
members = [".", "xkb-core", "xkbcommon-compat"]

[package]
name = "wkb"
version = "0.1.0"
edition = "2021"

[features]
default = ["compose"]
compose = []

[dependencies]
xkb-core = { path = "xkb-core" }

[dev-dependencies]
test-case = "3.3.1"
xkbcommon = "0.9.0"
xkbcommon-dl = "0.4.2"
xkbcommon-compat = { path = "xkbcommon-compat" }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bench_speed"
harness = false

[[example]]
name = "bench_memory"

[[example]]
name = "bench_size_wkb"

[[example]]
name = "bench_size_xkbcommon"

[[example]]
name = "bench_size_xkbcommon_dl"

[[example]]
name = "bench_size_xkbcommon_compat"
