[workspace]
members = [".", "xkb-core", "xkbcommon-compat"]

[package]
name = "wkb"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "Lightweight keyboard handling library for Wayland — a pure Rust alternative to xkbcommon"
license = "MIT"
repository = "https://github.com/rano-oss/wkb"
readme = "README.md"
keywords = ["keyboard", "wayland", "xkb", "input", "linux"]
categories = ["os::linux-apis"]

include = [
    "src/**/*",
    "Cargo.toml",
    "LICENSE",
    "README.md",
]

[features]
default = ["xkb", "compose"]
xkb = ["xkb-core"]
compose = []
testing = ["xkb"]

[dependencies]
xkb-core = { version = "0.1.0", path = "xkb-core", optional = true }

[dev-dependencies]
wkb = { path = ".", features = ["testing"] }
test-case = "3.3.1"
xkbcommon = "0.9.0"
xkbcommon-dl = "0.4.2"
xkbcommon-compat = { path = "xkbcommon-compat" }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bench_speed"
harness = false

[[example]]
name = "bench_memory"

[[example]]
name = "bench_size_wkb"

[[example]]
name = "bench_size_xkbcommon"

[[example]]
name = "bench_size_xkbcommon_dl"

[[example]]
name = "bench_size_xkbcommon_compat"
